# pyright

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitrepo  .npmignore  .pre-commit-hooks.yaml  .prettierignore  .prettierrc  BIRTHDAY WITH AOUN  CACHING_IMPLEMENTATION.md  CONTRIBUTING.md  FRONET Model  LICENSE.txt  README.md  Traffic Singal Detection.py  __version__.py  animation.py  build.sh  dynamic_info.py  free*lancer  get_version.py  hell.py  index.debug.js  index.js  jest.config.js  lerna.json  log_analysis.py  package-lock.json  package.json  pdm_build.py  pw  pw.bat  pyproject.toml  tsconfig.json
.beads/: config.yaml  issues.jsonl
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/cfs-npm-authenticate/: action.yml
.github/actions/cfs-npm-cache/: action.yml
.github/actions/cfs-npm-install/: action.yml
.github/actions/choose-npm-install/: action.yml
.github/actions/npm-cache-dir/: action.yml
.github/actions/standard-npm-install/: action.yml
.github/agents/: pyright-test-policy.md  typeshed-update-agent.md
.github/plan/: source-file-lifetime-model.md  source-file-lifetime-redesign.md
.github/plans/: pyright_benchmark_plan.md
.github/plans/archived/: FIX_11453_QUALNAME_INSTANCE_ACCESS_PLAN.md  FIX_11483_CONTEXT_MANAGER_GENERIC_EXIT_PLAN.md
.github/plans/future/: FIX_11483_CONTEXT_MANAGER_GENERIC_EXIT_PLAN.md
.github/workflows/: azure-functions-app-python.yml  build.yml  build_and_release.yml  codeql.yml  copilot-setup-steps.yml  docs.yaml  mypy_primer.yaml  mypy_primer_comment.yaml  mypy_primer_pr.yaml  mypy_primer_push.yaml  pyright_ecosystem_benchmark.yaml  release.yml  static-analysis.yml  trigger_pylance.yaml  validation.yml
.rpg/: .gitignore  last_parsed_sha.txt  rpg_encoder.json
basedpyright/: langserver.py  pyright.py  run_node.py
client/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
client/schemas/: pyrightconfig.schema.json
client/src/: cancellationUtils.ts  extension.ts  progress.ts
client/typeshed-fallback/: README.md
common/: tsconfig.json
docs/:  configuration.md  README.md  SHOWROOM  _navbar.md  _sidebar.md  build-debug.md  builtins.md  ci-integration.md  command-line.md  commands.md  comments.md  configuration.md  faq.md  features.md  getting-started.md  import-resolution.md  import-statements.md  index.html  index.md  installation.md  internals.md  mypy-comparison.md  rust-port-test-coverage-plan.md  settings.md  smoker  type-concepts-advanced.md  type-concepts.md  type-inference.md  type-server.md  type-stubs.md  typed-libraries.md
docs/cache/: CI-EXAMPLES.md  README.md  circleci.yml  github-actions.yml  gitlab-ci.yml  jenkinsfile
docs/scripts/: generateTypeEvaluatorMd.js  generateTypeEvaluatorMd.js.map  generateTypeEvaluatorMd.ts
plan/: test-output.txt
scripts/: pyright-cache-manager.js
server/: .eslintignore  .prettierignore  cat  copyTypeshedFallback.js  customInstallServerIntoExtension.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config-cli.js  webpack.config-extension.js  webpack.config-pyright.js  webpack.config-server.js  webpack.config.js
server/src/: backgroundAnalysis.ts  backgroundAnalysisBase.ts  backgroundThreadBase.ts  index.d.ts  languageServerBase.ts  pyright.ts  scopeUtils.ts  server.ts  workspaceMap.ts
server/src/analyzer/: analysis.ts  analyzerFileInfo.ts  analyzerNodeInfo.ts  backgroundAnalysisProgram.ts  binder.ts  checker.ts  circularDependency.ts  codeFlow.ts  commentUtils.ts  completionProvider.ts  declaration.ts  declarationUtils.ts  definitionProvider.ts  docStringToMarkdown.ts  docStringUtils.ts  documentSymbolProvider.ts  expressionEvaluator.ts  expressionUtils.ts  hoverProvider.ts  importResolver.ts  importResult.ts  importSorter.ts  importStatementUtils.ts  inferredType.ts  parseTreeCleaner.ts  parseTreeUtils.ts  parseTreeWalker.ts  postParseWalker.ts  program.ts  pythonPathUtils.ts  referencesProvider.ts  scope.ts  scopeUtils.ts  semanticAnalyzer.ts  service.ts  signatureHelpProvider.ts  sourceFile.ts  sourceMapper.ts  staticExpressions.ts  symbol.ts  (+14 more)
server/src/commands/: commandController.ts  commands.ts  createTypeStub.ts  quickActionCommand.ts  restartServer.ts
server/src/common/: cancelToken.ts  cancellationUtils.ts  collectionUtils.ts  commandLineOptions.ts  configOptions.ts  console.ts  consts.ts  core.ts  debug.ts  deferred.ts  diagnostic.ts  diagnosticRules.ts  diagnosticSink.ts  editAction.ts  extensibility.ts  extensions.ts  fileSystem.ts  logTracker.ts  pathConsts.ts  pathUtils.ts  positionUtils.ts  progressReporter.ts  promiseUtils.ts  pythonVersion.ts  stringMap.ts  stringUtils.ts  textEditUtils.ts  textRange.ts  textRangeCollection.ts  timing.ts  vfs.ts
server/src/definitions/: commands.ts
server/src/languageService/: analyzerServiceExecutor.ts  autoImporter.ts  callHierarchyProvider.ts  codeActionProvider.ts  commands.ts  completionProvider.ts  definitionProvider.ts  documentSymbolProvider.ts  hoverProvider.ts  importSorter.ts  quickActions.ts  referencesProvider.ts  signatureHelpProvider.ts  vscodelspUtils.ts
server/src/localization/: localize.ts  package.nls.en-us.json
server/src/parser/: characterStream.ts  characters.ts  nameBindings.ts  parseNodes.ts  parser.ts  stringTokenUtils.ts  tokenizer.ts  tokenizerTypes.ts  unicode.ts
server/src/tests/: binder.test.ts  builtins1.test.ts  checker.test.ts  collectionUtils.test.ts  common.test.ts  config.test.ts  debug.test.ts  docStringToMarkdown.test.ts  docStringUtils.test.ts  filesystem.test.ts  fourSlashParser.test.ts  fourSlashRunner.test.ts  localizer.test.ts  namedtuple.test.ts  parser.test.ts  pathUtils.test.ts  semanticAnalyzer.test.ts  sourceFile.test.ts  stringUtils.test.ts  testState.test.ts  testUtils.ts  testWalker.ts  tokenizer.test.ts  (+2 more)
specs/: dataclass_transforms.md  dataclass_transforms.txt  psycopg_analysis.md
(+556 files in other folders)
